# sqlc-gen-sqlx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  buf.gen.yaml  compose.yaml  mise.toml  sqlc.yaml
.github/workflows/: ci.yml  release-please.yml  release.yml
examples/advanced-types/: Cargo.toml  queries.sql  schema.sql
examples/advanced-types/src/: main.rs  queries.rs
examples/basic/: Cargo.toml  queries.sql
examples/basic/src/: main.rs  queries.rs
examples/batch/: Cargo.toml  queries.sql  schema.sql
examples/batch/src/: main.rs  queries.rs
examples/enums/: Cargo.toml  queries.sql  schema.sql
examples/enums/src/: main.rs  queries.rs
scripts/: proto-sync.sh
src/: catalog.rs  config.rs  emit.rs  error.rs  ident.rs  lib.rs  main.rs  plugin.codegen.rs  types.rs
src/codegen/: batch.rs  composites.rs  copyfrom.rs  enums.rs  mod.rs  query.rs
src/plugin/: mod.rs
tests/: codegen.rs  e2e.rs
tests/e2e/fixtures/: Cargo.toml.tmpl
tests/e2e/support/: mod.rs
tests/fixtures/basic/: queries.sql
tests/snapshots/: codegen__batch_dynamic_slice_param.snap  codegen__batchexec.snap  codegen__batchmany.snap  codegen__batchone.snap  codegen__composite_types.snap  codegen__copyfrom.snap  codegen__dynamic_slice_param.snap  codegen__embed.snap  codegen__enum_types.snap  codegen__exec.snap  codegen__execlastid.snap  codegen__execresult.snap  codegen__execrows.snap  codegen__many.snap  codegen__multidimensional_array_types.snap  codegen__named_params.snap  codegen__nullable_named_param.snap  codegen__one.snap  codegen__range_types.snap  codegen__slice_param.snap
(+24 files in other folders)
