[workspace]
members = [".", "examples/*"]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "ipnetwork", "mac_address", "bit-vec", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[package]
name = "sqlc-gen-sqlx"
version = "0.1.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A sqlc plugin that generates type-safe sqlx Rust code from SQL queries."
repository = "https://github.com/mathematic-inc/sqlc-gen-sqlx"

[[bin]]
name = "sqlc-gen-sqlx"
path = "src/main.rs"

[lib]
name = "sqlc_gen_sqlx"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"

[dependencies]
buffa = "0.3"
convert_case = "0.8"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
syn = { version = "2", features = ["full"] }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { workspace = true }
